@@ -30,4 +30,6 @@ void reverse_cb (GtkWidget *widget, ViewerData *viewer_data);
 void right90_cb (GtkWidget *widget, ViewerData *viewer_data);
 void left90_cb (GtkWidget *widget, ViewerData *viewer_data);
 
+void widget_close_cb (GtkWidget *widget, ViewerData *viewer_data);
+
 #endif
